--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>index.html</h1>
         <h3> <a href="/zoom" style="text-decoration: none"> Zoom api test</a></h3>
+        <h3> <a href="/list" style="text-decoration: none"> Zoom webhook test</a></h3>
 </body>
 </html>
