fix : 콘솔 warn 로그 - 설정변경, 의존성추가
chore : 로그변경

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -198,7 +198,7 @@
                 dataType: 'text',
                 data: jsonBody,
                 success: function (data) {
-                    console.log("응답 :", data);
+                    console.debug("상태변경 성공");
                 },
                 error: function (data, status, err) {
                     console.log("error : ", data, status, err)
